[package]
name = "it8951"
version = "0.1.0"
authors = ["IT8951 Contributors"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Rust driver for IT8951 e-paper controller"
repository = "https://github.com/kylephillipsau/IT8951"
documentation = "https://docs.rs/it8951"
keywords = ["epaper", "eink", "display", "it8951", "waveshare"]
categories = ["embedded", "hardware-support"]
readme = "RUST_PORT.md"

[dependencies]
# Error handling
thiserror = "1.0"

# Utilities
byteorder = "1.5"
bitflags = "2.4"

# Logging
log = "0.4"

# SPI and GPIO (optional, enabled by default with "std" feature)
spidev = { version = "0.6", optional = true }
gpio-cdev = { version = "0.6", optional = true }

# Raspberry Pi specific (optional)
rppal = { version = "0.18", optional = true }

# Image processing (optional)
image = { version = "0.25", optional = true, default-features = false }
embedded-graphics = { version = "0.8", optional = true }

# Async support (optional)
tokio = { version = "1.0", optional = true, features = ["rt", "sync", "time"] }

# Serialization for configuration (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
# Testing
env_logger = "0.11"
proptest = "1.4"

[features]
default = ["std"]

# Standard library support
std = ["spidev", "gpio-cdev"]

# Raspberry Pi support
rpi = ["rppal"]

# Image format support
image-support = ["image"]

# Graphics support
graphics = ["embedded-graphics"]

# Async support
async = ["tokio"]

# Configuration file support
config = ["serde", "toml"]

# Include all features
full = ["std", "rpi", "image-support", "graphics", "async", "config"]

# Hardware testing (requires actual device)
hardware-tests = []

# Virtual display for testing without hardware
virtual-display = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
